docs/examples/istio-testapp/testapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: testapp
