docs/examples/istio-testapp/testapp-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp
  namespace: istio-testapp
spec:
  selector:
    # Use istio default controller
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
