docs/examples/istio-testapp/testapp-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp
  namespace: istio-testapp
spec:
  hosts:
  - '*'
  gateways:
  - testapp
  http:
  - route:
    - destination:
        host: testapp
        port:
          number: 8080
